# BallsDex-Event-Package

./: README.md  pyproject.toml
event/: __init__.py  admin.py  apps.py  models.py
event/migrations/: 0001_initial.py  0002_event_image_url.py
event/package/: __init__.py  cog.py
