[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ballsdex-event"
version = "0.0.0"

description = "Events package for BallsDex V3"
license = "MIT"
authors = [
    { name = "Haymooed" },
]
readme = "README.md"

dependencies = [
    "django-solo>=2.2.0",
]
